--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,11 +15,13 @@ jobs:
         node-version: [10.x]
 
     steps:
-      - name: GitHub Pages Deploy
-      - uses: maxheld83/ghpages@v0.1.2
-        env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BASE_BRANCH: master # The branch the action should deploy from.
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: build # The folder the action should deploy.
-          BUILD_SCRIPT: npm install && npm run-script build # The build script the action should run prior to deploying.
+    - name: Checkout
+      uses: actions/checkout@master
+
+    - name: Build and Deploy
+      uses: JamesIves/github-pages-deploy-action@master
+      env:
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: 'build'
+        BUILD_SCRIPT: npm run-script build
