--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,5 +17,5 @@ jobs:
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.GH_PAT }}
         PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./public
+        PUBLISH_DIR: ./build
         CI: true
