--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,6 +27,6 @@ jobs:
     - name: Deploy to Github Pages
       uses: peaceiris/actions-gh-pages@v2.5.0
       env:
-        ACTIONS_DEPLOY_KEY: ${{ secrets.GH_PAT }}
+        PERSONAL_TOKEN: ${{ secrets.GH_PAT }}
         PUBLISH_BRANCH: gh-pages
         PUBLISH_DIR: ./build
