--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
+language: node_js
 deploy:
   provider: pages
+  local_dir: dist
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
   keep_history: true
