--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "This repository hosts the source files for my personal websites.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "test": "parcel build src/index.html",
+    "dev": "parcel src/index.html"
   },
   "repository": {
     "type": "git",
