--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,34 @@
-### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-### Windows ###
-# Windows thumbnail cache files
-Thumbs.db
-ehthumbs.db
-ehthumbs_vista.db
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Folder config file
-Desktop.ini
+# testing
+/coverage
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+# next.js
+/.next/
+/out/
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# production
+/build
 
-# Windows shortcuts
-*.lnk
-
-node_modules
+# misc
 .DS_Store
+*.pem
 
-# Compiled
-dist
-dist/**/*
-build
-build/**/*
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Parcel
-.cache
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# vercel
+.vercel
