--- a/package.json
+++ b/package.json
@@ -1,28 +1,18 @@
 {
-  "name": "riccardozaffalon.github.io",
-  "version": "1.0.0",
-  "description": "This repository hosts the source files for my personal websites.",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "parcel build src/index.html",
-    "dev": "parcel src/index.html"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RiccardoZaffalon/riccardozaffalon.github.io.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/RiccardoZaffalon/riccardozaffalon.github.io/issues"
-  },
-  "homepage": "https://github.com/RiccardoZaffalon/riccardozaffalon.github.io#readme",
-  "devDependencies": {
-    "parcel-bundler": "^1.12.4",
-    "sass": "^1.27.0"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "gsap": "^3.6.0"
+    "next": "latest",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^3.0.0"
   }
 }
