--- a/package.json
+++ b/package.json
@@ -2,27 +2,13 @@
   "name": "riccardozaffalon.github.io",
   "version": "1.0.0",
   "description": "This repository hosts the source files for my personal websites.",
-  "main": "index.js",
   "scripts": {
     "test": "parcel build src/index.html",
+    "build": "parcel build src/index.html",
     "dev": "parcel src/index.html"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RiccardoZaffalon/riccardozaffalon.github.io.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/RiccardoZaffalon/riccardozaffalon.github.io/issues"
-  },
-  "homepage": "https://github.com/RiccardoZaffalon/riccardozaffalon.github.io#readme",
+  "author": "Riccardo Zaffalon",
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
-    "sass": "^1.27.0"
-  },
-  "dependencies": {
-    "gsap": "^3.6.0"
+    "parcel": "^2.2.1"
   }
 }
