--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "author": "Riccardo Zaffalon",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.2.1",
     "parcel": "^2.2.1"
   }
 }
