--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "parcel build src/index.html",
     "build": "parcel build src/index.html",
-    "dev": "parcel src/index.html"
+    "dev": "parcel src/index.html --open"
   },
   "author": "Riccardo Zaffalon",
   "devDependencies": {
