--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
       - name: Install and build
-      - uses: actions/setup-node@master
+        uses: actions/setup-node@master
         with:
           node-version: 16
       - run: npm ci
