--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Build and deploy to gh-pages
 on:
   push:
     branches:
@@ -17,7 +17,7 @@ jobs:
           node-version: 16
       - run: npm ci
       - run: npm run build
-      - name: Deploy 🚀
+      - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: dist
