--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "This repository hosts the source files for my personal websites.",
   "scripts": {
-    "test": "vite build src",
-    "build": "vite build src",
-    "dev": "vite src --open",
+    "test": "vite build",
+    "build": "vite build",
+    "dev": "vite --open",
     "start": "npm run dev"
   },
   "author": "Riccardo Zaffalon",
