--- a/package.json
+++ b/package.json
@@ -2,17 +2,29 @@
   "name": "riccardozaffalon.github.io",
   "version": "1.0.0",
   "description": "This repository hosts the source files for my personal websites.",
+  "main": "astro.config.js",
   "scripts": {
-    "test": "vite build",
-    "build": "vite build",
-    "dev": "vite --port 5174",
-    "start": "npm run dev"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "astro dev --port 5152",
+    "start": "astro dev --port 5152",
+    "build": "astro build",
+    "preview": "astro preview"
   },
-  "author": "Riccardo Zaffalon",
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "vite": "^4.1.4"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RiccardoZaffalon/riccardozaffalon.github.io.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/RiccardoZaffalon/riccardozaffalon.github.io/issues"
+  },
+  "homepage": "https://github.com/RiccardoZaffalon/riccardozaffalon.github.io#readme",
+  "dependencies": {
+    "astro": "^2.8.0",
+    "astro-compress": "^1.1.49",
+    "rehype-external-links": "^2.1.0",
+    "sass": "^1.63.6"
   }
 }
