--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "riccardozaffalon.github.io",
-  "version": "1.0.0",
-  "description": "This repository hosts the source files for my personal websites.",
-  "main": "astro.config.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "astro dev --port 5152",
-    "start": "astro dev --port 5152",
-    "build": "astro build",
-    "preview": "astro preview"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RiccardoZaffalon/riccardozaffalon.github.io.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/RiccardoZaffalon/riccardozaffalon.github.io/issues"
-  },
-  "homepage": "https://github.com/RiccardoZaffalon/riccardozaffalon.github.io#readme",
-  "dependencies": {
-    "astro": "^2.8.0",
-    "rehype-external-links": "^2.1.0",
-    "sass": "^1.63.6"
-  }
+	"name": "riccardozaffalon.github.io",
+	"version": "7.0.0",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.1",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/eslint": "^8.56.0",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.35.1",
+		"micromark": "^4.0.0",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"sass": "^1.74.1",
+		"svelte": "^4.2.7",
+		"vite": "^5.0.3"
+	},
+	"type": "module"
 }
