--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "7.0.0",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --port 5199",
 		"build": "vite build",
 		"preview": "vite preview",
 		"lint": "prettier --check . && eslint .",
